fix scrollbar clipped in <CodeBlock>

--- a/packages/anthill/src/CodeBlock.module.css
+++ b/packages/anthill/src/CodeBlock.module.css
@@ -2,6 +2,7 @@
   background: var(--context-background);
   border: var(--context-border);
   border-radius: var(--context-border-radius);
+  overflow: hidden;
   position: relative;
 
   .copyButton {
